removed quote info before quote is obtained

--- a/quote/templates/quote/quote.html
+++ b/quote/templates/quote/quote.html
@@ -31,6 +31,7 @@
       <hr class="w-50 mb-1">
     </div>
   </div>
+  {% if quote.quote %}
   <div class="row">
     <div class="container">
       <div class="col-12 mt-5">
@@ -48,6 +49,7 @@
       </div>
     </div>
   </div>
+  {% endif %}
   <div class="row">
     <div class="col-12">
 
