--- a/create_account/templates/create_account/create_account.html
+++ b/create_account/templates/create_account/create_account.html
@@ -33,7 +33,7 @@
 
           {% endfor %}
           <div class="text-right">
-            <button class="btn btn-black rounded-0" type="submit">Submit Form</button>
+            <button class="btn-dark btn btn-md rounded-0" type="submit">Submit Form</button>
           </div>
         </form>
       </div>
