--- a/faqs/templates/faqs/add_faq.html
+++ b/faqs/templates/faqs/add_faq.html
@@ -23,8 +23,8 @@
           {{ field | as_crispy_field }}
           {% endfor %}
           <div class="text-right">
-            <a class="btn btn-outline-black rounded-0" href="{% url 'faqs' %}">Cancel</a>
-            <button class="btn btn-black rounded-0" type="submit">Add Faq</button>
+            <a class="btn-dark btn btn-md rounded-0" href="{% url 'faqs' %}">Cancel</a>
+            <button class="btn-dark btn btn-md rounded-0" type="submit">Add Faq</button>
           </div>
         </form>
         
