--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -31,7 +31,7 @@
     <div class="col-md-12 col-lg-6">
 
       <a class="float-right" href="{% url 'admin:index' %}">
-        <img width="170" class="logo-font text-dark my-0" src="/media/wilsons-logo-trans.png" alt="Wilson's Express">
+        <img width="170" class="logo-font text-dark my-0" src="{{ MEDIA_URL }}wilsons-logo-trans.png" alt="Wilson's Express">
       </a>
     </div>
   </div>
