--- a/templates/base.html
+++ b/templates/base.html
@@ -91,6 +91,7 @@
                 <a href="{% url 'faqs' %}" class="dropdown-item">FAQs</a>
                 <a href="https://apc-overnight.com/sending-a-parcel/terms_and_conditions_of_carriage/" target="_blank"
                   rel="noreferrer" class="dropdown-item">APC T&C's</a>
+                <a href="{% url 'covid' %}" class="dropdown-item">COVID Info</a>
               </ul>
             </li>
             <li class="list-inline-item dropdown">
