--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -8,7 +8,7 @@
     <li class="nav-item nav-width dropdown">
       <a class="logo-font font-weight-bold nav-link text-dark text-nowrap mr-5" href="#" id="recieving-link"
         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Recieving a Parcel?
+        Receiving a Parcel?
       </a>
       <ul class="dropdown-menu border-0" aria-labelledby="recieving-link">
         <a href="https://apc-overnight.com/receiving-a-parcel/tracking" target="_blank" rel="noreferrer"
