--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -189,18 +189,28 @@
             <p class="mb-0">£{{ order.order_total }}</p>
           </div>
         </div>
-
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0 text-black font-weight-bold">Delivery</p>
+            <p class="mb-0 text-black font-weight-bold">Discount</p>
           </div>
           {% if order.ten_percent_discount %}
-          <div class="col-12 col-md-8 text-md-right">
+          <div class="col-12 text-success col-md-8 text-md-right">
             <p class="mb-0">£{{ order.ten_percent_discount }}</p>
+          </div>
+          {% else %}
+          <div class="col-12 text-danger col-md-8 text-md-right">
+            <p class="mb-0">£0.00</p>
           </div>
           {% endif %}
         </div>
-
+        <div class="row">
+          <div class="col-12 col-md-4">
+            <p class="mb-0 text-black font-weight-bold">VAT</p>
+          </div> 
+          <div class="col-12 col-md-8 text-md-right">
+            <p class="mb-0">£{{ order.vat }}</p>
+          </div>
+        </div>
         <div class="row">
           <div class="col-12 col-md-4">
             <p class="mb-0 text-black font-weight-bold">Grand Total</p>
@@ -214,21 +224,12 @@
   </div>
   <div class="row">
     <div class="col-12 col-lg-7 text-right">
-      {% if from_profile %}
-      <a href="{% url 'profile' %}" class="btn btn-black rounded-0 my-2">
+      <a href="{% url 'profile' %}" class="btn-dark btn btn-md rounded-0 my-2">
         <span class="icon mr-2">
-          <i class="fas fa-angle-left"></i>
+          <i class="fas fa-user"></i>
         </span>
         <span class="text-uppercase">Back to Profile</span>
       </a>
-      {% else %}
-      <a href="{% url 'home' %}" class="btn btn-black rounded-0 my-2">
-        <span class="icon mr-2">
-          <i class="fas fa-gifts"></i>
-        </span>
-        <span class="text-uppercase">Now check out the latest deals!</span>
-      </a>
-      {% endif %}
     </div>
   </div>
 </div>
