--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -11,7 +11,7 @@
   <div class="row">
     <div class="col text-center mt-3">
       <hr>
-      <h2 class="logo-font mb-4">Welcome {{profile.user.first_name}} {{profile.user.last_name}}</h2>
+      <h2 class="logo-font mb-4">Welcome {{profile.user.username}}</h2>
       <hr>
     </div>
   </div>
@@ -23,16 +23,16 @@
           <thead>
             {{request.session.user}}
             <tr>
-              <th>Order Number</th>
+              <th class="pl-3">Order Number</th>
               <th>Date</th>
-              <th>Items</th>
-              <th>Order Total</th>
+              <th>Jobs</th>
+              <th>Total</th>
             </tr>
           </thead>
           <tbody>
             {% for order in orders %}
             <tr>
-              <td>
+              <td class="pl-3">
                 <a href="{% url 'order_history' order.order_ref %}" title="{{ order.order_ref }}">
                   {{ order.order_ref|truncatechars:9 }}
                 </a>
@@ -42,9 +42,7 @@
                 <ul class="list-unstyled">
                   {% for item in order.lineitems.all %}
                   <li class="small">
-                    {% if item.product.has_sizes %}
-                    Size {{ item.product.size|upper }}
-                    {% endif %}{{ item.product.name }} x{{ item.quantity }}
+                    {{ item.items }} x {{ item.chargable_weight }}
                   </li>
                   {% endfor %}
                 </ul>
@@ -62,7 +60,7 @@
       <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
         {% csrf_token %}
         {{ form|crispy }}
-        <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
+        <button class="btn-dark btn btn-md rounded-0 text-uppercase float-right my-2">Update Information</button>
       </form>
     </div>
   </div>
