--- a/quote/templates/quote/details.html
+++ b/quote/templates/quote/details.html
@@ -25,7 +25,9 @@
         <h4>Actual Weight: {{quote.overall_weight}}{{booking.overall_weight}}</h4>
         <h4>Volume Weight: {{quote.overall_volume}}{{booking.overall_volume}}</h4>
         <h4>Items: {{quote.items}}{{booking.items}}</h4>
-        <h4>Price: <span class="font-weight-bold display-4">£{{quote.quote|floatformat:2}}{{booking.price|floatformat:2}}</span> </h4>
+        <h4>Price: <span
+            class="font-weight-bold display-4">£{{quote.quote|floatformat:2}}{{booking.price|floatformat:2}}</span>
+        </h4>
         <p>
           Reference Number: <span class="font-weight-bold">{{quote.quote_ref}}{{booking.booking_ref}}</span>
           <span class="small d-block font-weight-light font-italic">Use this reference if you need to contact us about
@@ -37,8 +39,7 @@
   <div class="row">
     <div class="col-12">
 
-      <form method="POST" id="quote-form" class="form mb-2 p-3 bg-white"
-        enctype="multipart/form-data">
+      <form method="POST" id="quote-form" class="form mb-2 p-3 bg-white" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="container">
           <div class="row ">
@@ -230,8 +231,8 @@
           </div>
         </div>
         <div class="text-right">
-          <button id="submit-button" class="btn btn-black rounded-0">
-            <span class="font-weight-bold">Add Booking to Bag</span>
+          <button id="submit-button" class="btn-dark btn btn-md rounded-0">
+            Add Booking to Bag
             <span class="icon">
               <i class="fas fa-lock"></i>
             </span>
