--- a/quote/templates/quote/quote.html
+++ b/quote/templates/quote/quote.html
@@ -44,7 +44,7 @@
           Reference Number: <span class="font-weight-bold">{{quote.quote_ref}}</span>
           <span class="small d-block font-weight-light font-italic">Use this reference if you need to contact us about
             your quote</span>
-           
+
         </p>
       </div>
     </div>
@@ -244,15 +244,24 @@
 
             </div>
           </fieldset>
+          <div class="row">
+            <div class="col-12">
+              <p>The Majority of our Freight is put through the APC overnight Network so travel under the APC Term's and
+                Conditions, which can be viewed
+                <a href="https://apc-overnight.com/sending-a-parcel/terms_and_conditions_of_carriage/">HERE</a>.
+              </p>
+            </div>
+          </div>
         </div>
+        
         <div class="text-right">
           <button id="details" name="details" class="btn-dark btn btn-md rounded-0" type="submit">Enter
             Details</button>
           <button name="update" class="btn-dark btn btn-md rounded-0" type="submit">Update
             Quote!</button>
-            <p class="small my-1">
-              If you have changed any details you will need to update your quote!
-            </p>
+          <p class="small my-1">
+            If you have changed any details you will need to update your quote!
+          </p>
         </div>
 
       </form>
@@ -273,36 +282,4 @@
 {% block postloadjs %}
 {{ block.super }}
 <script src="{% static 'quote/js/quote.js' %}"></script>
-<script>
-
-
-  $("#id_c_county").prepend('<option value="" selected="selected">County</option>');
-  $("#id_d_county").prepend('<option value="" selected="selected">County</option>');
-
-  let cCountySelected = $('#id_c_county').val();
-  if (!cCountySelected) {
-    $('#id_c_county').css('color', '#aab7c4');
-  };
-  $('#id_c_county').change(function () {
-    cCountySelected = $(this).val();
-    if (!cCountySelected) {
-      $(this).css('color', '#aab7c4');
-    } else {
-      $(this).css('color', '#000');
-    }
-  });
-  let dCountySelected = $('#id_d_county').val();
-  if (!dCountySelected) {
-    $('#id_d_county').css('color', '#aab7c4');
-  };
-  $('#id_d_county').change(function () {
-    dCountySelected = $(this).val();
-    if (!dCountySelected) {
-      $(this).css('color', '#aab7c4');
-    } else {
-      $(this).css('color', '#000');
-    }
-  }); 
-</script>
-
 {% endblock %}
