--- a/store_bag/templates/store_bag/checkout-buttons.html
+++ b/store_bag/templates/store_bag/checkout-buttons.html
@@ -1,4 +1,4 @@
-<a href="{% url 'checkout' %}" class="btn rounded-0 btn-md">
+<a href="{% url 'checkout' %}" class="btn-dark btn btn-md rounded-0">
     <span class="text-uppercase">Secure Checkout</span>
     <span class="icon">
         <i class="fas fa-lock"></i>
