--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -49,7 +49,7 @@
           Send <strong>{{ ten_percent_delta }}</strong> more to get 10% off!
         </p>
         {% endif %}
-        <a href="{% url 'view_bag' %}" class="btn btn-black btn-block rounded-0">
+        <a href="{% url 'view_bag' %}" class="btn-dark btn btn-md rounded-0 w-100">
           <span class="text-uppercase">Go To Secure Checkout</span>
           <span class="icon">
             <i class="fas fa-lock"></i>
