improved confirmation email, improved styling

--- a/quote/templates/quote/details.html
+++ b/quote/templates/quote/details.html
@@ -227,6 +227,15 @@
                   </div>
                 </div>
               </fieldset>
+              <div class="row">
+                <div class="col-12">
+                  <p>The Majority of our Freight is put through the APC overnight Network so travel under the APC Term's and
+                    Conditions, which can be viewed
+                    <a href="https://apc-overnight.com/sending-a-parcel/terms_and_conditions_of_carriage/" target="_blank"
+                    rel="noreferrer" >HERE</a>.
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
