--- a/create_account/templates/create_account/create_account.html
+++ b/create_account/templates/create_account/create_account.html
@@ -19,7 +19,8 @@
           our sales team will be in contact within 24hours.</p>
         <p>We provide services for Overnight, Sameday and International so let us know how we can help you.</p>
         <p>The Majority of our Freight is put through the APC overnight Network so travel under the APC Term's and Conditions, which can be viewed
-          <a href="https://apc-overnight.com/sending-a-parcel/terms_and_conditions_of_carriage/">HERE</a>.
+          <a href="https://apc-overnight.com/sending-a-parcel/terms_and_conditions_of_carriage/" target="_blank"
+          rel="noreferrer" >HERE</a>.
         </p>
         <p>Any further questions just let us know in the comments section below.</p>
 
