--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -9,14 +9,13 @@
 <div class="overlay container"></div>
 <div class="container header-container">
   <div class="row">
-    <div class="col text-center mt-3">
-      <hr>
-      <h2 class="logo-font mb-4">Welcome {{profile.user.username}}</h2>
-      <hr>
-    </div>
-  </div>
+		<div class="col text-center mt-3">
+		  <h2 class="logo-font mb-4">Welcome {{profile.user.username}}</h2>
+		  <hr class="w-50 mb-1">
+		</div>
+	</div>
   <div class="row">
-    <div class="col-12 col-lg-6">
+    <div class="col-12 col-lg-6 mt-5">
       <p class="text-muted">Order History</p>
       <div class="order-history table-responsive">
         <table class="table table-sm table-borderless">
@@ -55,7 +54,7 @@
         </table>
       </div>
     </div>
-    <div class="col-12 col-lg-6">
+    <div class="col-12 col-lg-6 mt-5">
       <p class="text-muted">Default Delivery Information</p>
       <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
         {% csrf_token %}
