--- a/quote/templates/quote/quote.html
+++ b/quote/templates/quote/quote.html
@@ -248,7 +248,8 @@
             <div class="col-12">
               <p>The Majority of our Freight is put through the APC overnight Network so travel under the APC Term's and
                 Conditions, which can be viewed
-                <a href="https://apc-overnight.com/sending-a-parcel/terms_and_conditions_of_carriage/">HERE</a>.
+                <a href="https://apc-overnight.com/sending-a-parcel/terms_and_conditions_of_carriage/" target="_blank"
+                rel="noreferrer" >HERE</a>.
               </p>
             </div>
           </div>
