--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -35,7 +35,7 @@
             <p class="mb-0 text-black font-weight-bold">Order Number</p>
           </div>
           <div class="col-12 col-md-8 text-md-right">
-            <p class="mb-0">{{ order.order_number }}</p>
+            <p class="mb-0">{{ order.order_ref }}</p>
           </div>
         </div>
 
@@ -79,6 +79,7 @@
             </div>
           </div>
           <div class="col-12 col-md-4 text-md-right">
+            <p class="small mb-0 text-black">Reference: {{ item.booking.booking_ref }}</p>
             <p class="small mb-0">Service: {{ item.booking.service }}</p>
             {% if item.booking.spec_service %}
             <p class="small mb-0">Speciality: {{ item.booking.spec_service }}</p>
