--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -17,7 +17,8 @@
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
          {{ form|crispy }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
+
+        <button class="btn-dark btn btn-md rounded-0" type="submit">{% trans 'Reset My Password' %}</button>
     </form>
 
     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
