--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -14,7 +14,7 @@
             <form method="POST" action="{{ action_url }}">
                 {% csrf_token %}
                  {{ form|crispy }}
-                <input type="submit" name="action" value="{% trans 'change password' %}"/>
+                <button class="btn-dark btn btn-md rounded-0" type="submit" name="action">{% trans 'change password' %}</button>
             </form>
         {% else %}
             <p>{% trans 'Your password is now changed.' %}</p>
