--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -9,6 +9,6 @@
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
          {{ form|crispy }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
+        <input class="btn-dark btn btn-md rounded-0" type="submit" name="action" value="{% trans 'Set Password' %}"/>
     </form>
 {% endblock %}
