--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -17,6 +17,8 @@
       <p class="text-black">Your order information is below. A confirmation email will be sent to
         <strong>{{ order.email }}</strong>.
       </p>
+      <p class="text-black">Bookings before 4pm will be booked for collection for the following day.</p>
+      <p class="text-black">Any bookings later than this may experience a days delay.</p>
     </div>
   </div>
 
@@ -60,19 +62,19 @@
             <div class="row">
               <div class="col-6">
                 <p class="small mb-0 text-black">Delivery:</p>
-                <p class="small mb-0 text-black font-weight-bold"><strong>{{ item.booking.d_contact_name }}, {{ item.booking.d_company }}</strong>
+                <p class="small mb-0 text-black font-weight-bold"><strong>{{ item.booking.d_contact_name|title }}, {{ item.booking.d_company|title }}</strong>
                 </p>
-                <p class="small mb-0 text-black font-weight-bold"><strong>{{ item.booking.d_street_address1 }}{% if item.booking.d_street_address2 %}, {{ item.booking.d_street_address2 }}{% endif %}</strong></p>
-                <p class="small mb-0 text-black font-weight-bold"><strong>{{ item.booking.d_town_or_city }}, {{ item.booking.d_county }}</strong>
+                <p class="small mb-0 text-black font-weight-bold"><strong>{{ item.booking.d_street_address1|title }}{% if item.booking.d_street_address2|title %}, {{ item.booking.d_street_address2|title }}{% endif %}</strong></p>
+                <p class="small mb-0 text-black font-weight-bold"><strong>{{ item.booking.d_town_or_city|title }}, {{ item.booking.d_county|title }}</strong>
                 </p>
                 <p class="small mb-0 text-black font-weight-bold"><strong> {{ item.booking.d_postcode }}</strong></p>
               </div>
               <div class="col-6">
                 <p class="small mb-0 text-black">Collection:</p>
-                <p class="small mb-0 text-black font-weight-bold"><strong>{{ item.booking.c_contact_name }}, {{ item.booking.c_company }}</strong>
+                <p class="small mb-0 text-black font-weight-bold"><strong>{{ item.booking.c_contact_name|title }}, {{ item.booking.c_company|title }}</strong>
                 </p>
-                <p class="small mb-0 text-black font-weight-bold"><strong>{{ item.booking.c_street_address1 }}{% if item.booking.c_street_address2 %}, {{ item.booking.c_street_address2 }}{% endif %}</strong></p>
-                <p class="small mb-0 text-black font-weight-bold"><strong>{{ item.booking.c_town_or_city }}, {{ item.booking.c_county }}</strong>
+                <p class="small mb-0 text-black font-weight-bold"><strong>{{ item.booking.c_street_address1|title }}{% if item.booking.c_street_address2|title %}, {{ item.booking.c_street_address2|title }}{% endif %}</strong></p>
+                <p class="small mb-0 text-black font-weight-bold"><strong>{{ item.booking.c_town_or_city|title }}, {{ item.booking.c_county|title }}</strong>
                 </p>
                 <p class="small mb-0 text-black font-weight-bold"><strong> {{ item.booking.c_postcode }}</strong></p>
               </div>
@@ -80,10 +82,7 @@
           </div>
           <div class="col-12 col-md-4 text-md-right">
             <p class="small mb-0 text-black">Reference: {{ item.booking.booking_ref }}</p>
-            <p class="small mb-0">Service: {{ item.booking.service }}</p>
-            {% if item.booking.spec_service %}
-            <p class="small mb-0">Speciality: {{ item.booking.spec_service }}</p>
-            {% endif %}
+            <p class="small mb-0">Service: {% if item.booking.spec_service %}{{ item.booking.spec_service }},{% endif %} {{ item.booking.service }}</p>
             <p class="small mb-0">Items: {{ item.booking.items }}</p>
             <p class="small mb-0">Weight: {% if item.booking.overall_weight > item.booking.overall_volume %}{{ item.booking.overall_weight }}{% else %}{{item.booking.overall_volume }}{% endif %}</p>
             <p class="small mb-0">@ £{{ item.booking.price }}</p>
@@ -103,7 +102,7 @@
             <p class="mb-0 text-black font-weight-bold">Full Name</p>
           </div>
           <div class="col-12 col-md-8 text-md-right">
-            <p class="mb-0">{{ order.full_name }}</p>
+            <p class="mb-0">{{ order.full_name|title }}</p>
           </div>
         </div>
 
@@ -112,7 +111,7 @@
             <p class="mb-0 text-black font-weight-bold">Address 1</p>
           </div>
           <div class="col-12 col-md-8 text-md-right">
-            <p class="mb-0">{{ order.street_address1 }}</p>
+            <p class="mb-0">{{ order.street_address1|title }}</p>
           </div>
         </div>
 
@@ -122,7 +121,7 @@
             <p class="mb-0 text-black font-weight-bold">Address 2</p>
           </div>
           <div class="col-12 col-md-8 text-md-right">
-            <p class="mb-0">{{ order.street_address2 }}</p>
+            <p class="mb-0">{{ order.street_address2|title }}</p>
           </div>
         </div>
         {% endif %}
@@ -133,7 +132,7 @@
             <p class="mb-0 text-black font-weight-bold">County</p>
           </div>
           <div class="col-12 col-md-8 text-md-right">
-            <p class="mb-0">{{ order.county }}</p>
+            <p class="mb-0">{{ order.county|title }}</p>
           </div>
         </div>
         {% endif %}
@@ -143,7 +142,7 @@
             <p class="mb-0 text-black font-weight-bold">Town or City</p>
           </div>
           <div class="col-12 col-md-8 text-md-right">
-            <p class="mb-0">{{ order.town_or_city }}</p>
+            <p class="mb-0">{{ order.town_or_city|title }}</p>
           </div>
         </div>
 
@@ -153,7 +152,7 @@
             <p class="mb-0 text-black font-weight-bold">Postal Code</p>
           </div>
           <div class="col-12 col-md-8 text-md-right">
-            <p class="mb-0">{{ order.postcode }}</p>
+            <p class="mb-0">{{ order.postcode|upper }}</p>
           </div>
         </div>
         {% endif %}
