--- a/store_bag/templates/store_bag/bag.html
+++ b/store_bag/templates/store_bag/bag.html
@@ -80,7 +80,7 @@
 
 			{% else %}
 			<p class="lead mb-5">Your bag is empty.</p>
-			<a href="{% url 'home' %}" class="btn btn-outline-black rounded-0 btn-lg">
+			<a href="{% url 'home' %}" class="btn-dark btn rounded-0 btn-lg">
 				<span class="icon">
 					<i class="fas fa-chevron-left"></i>
 				</span>
