changed ul to li in nav

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -10,12 +10,12 @@
         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Receiving a Parcel?
       </a>
-      <ul class="dropdown-menu border-0" aria-labelledby="recieving-link">
+      <li class="dropdown-menu border-0" aria-labelledby="recieving-link">
         <a href="https://apc-overnight.com/receiving-a-parcel/tracking" target="_blank" rel="noreferrer"
           class="dropdown-item inline-list">Track With APC Pinpoint</a>
         <a href="https://apccalled.com/" target="_blank" rel="noreferrer"
           class="dropdown-item inline-list">Reschedule with APC Called</a>
-      </ul>
+      </li>
     </li>
 
     <li class="nav-item nav-width dropdown">
@@ -23,13 +23,13 @@
         aria-haspopup="true" aria-expanded="false">
         Sending a Parcel?
       </a>
-      <ul class="dropdown-menu border-0" aria-labelledby="sending-link" id="sending-links">
+      <li class="dropdown-menu border-0" aria-labelledby="sending-link" id="sending-links">
 
         <a href="{% url 'quote' %}" class="dropdown-item">Send a Parcel</a>
 
         <a href="{% url 'create_account' %}" class="dropdown-item account">Open a Credit Account</a>
 
-      </ul>
+      </li>
     </li>
   </ul>
 </div>
