--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,9 +1,9 @@
-
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 
 body {
   background: url("/media/apcbg2.jpg") no-repeat center center fixed;
@@ -11,6 +11,70 @@ body {
   height: calc(100vh - 200px);
   color: #555;
   font-family: "Montserrat", sans-serif;
+}
+
+
+/* navbar */
+
+.grand-total-position {
+  position: absolute;
+}
+
+.navbar-light .navbar-toggler,
+.navbar-light .navbar-toggler:focus {
+  color: rgba(0, 0, 0, .5);
+  border-color: transparent;
+  outline: unset;
+}
+
+.site-wide-alert {
+  color: #fff;
+  background-color: #CA0B00;
+  border-color: #CA0B00;
+  padding: 5px 25px;
+  margin-bottom: 0;
+  border: 1px solid transparent;
+  border-radius: 0;
+  width: 100vw;
+}
+
+.main-logo-link {
+  width: fit-content;
+  top: 0;
+}
+
+button#main-nav-btn.navbar-toggler {
+  z-index: 1;
+  margin-top: 16px;
+}
+
+.navbar.navbar-expand-lg.navbar-dark {
+  padding: 0 1rem;
+}
+
+#topnav {
+  box-shadow: -1px 4px 10px -1px rgba(0, 0, 0, 0.7);
+  position: relative;
+  z-index: 999;
+  width: 100vw;
+}
+
+.header-container {
+  margin-top: 200px;
+}
+
+/* from Bulma */
+
+.icon {
+  align-items: center;
+  display: inline-flex;
+  justify-content: center;
+  height: 1.5rem;
+  width: 1.5rem;
+}
+
+.logo-font {
+  text-transform: uppercase;
 }
 
 
@@ -65,24 +129,8 @@ td:nth-of-type(4) {
   text-align: right;
 }
 
-/* Strictly for making the scrolling happen. */
 
-th[scope=row] + td {
-  min-width: 24em;
-}
-
-th[scope=row] {
-  min-width: 20em;
-}
-
-table {
-  display: block;
-  overflow-x: auto;
-}
-
-input[type=number] {
-    -moz-appearance:textfield; /* Firefox */
-}
+/* Google map */
 
 .map-container {
   height: 300px;
@@ -92,169 +140,50 @@ input[type=number] {
   height: 100%;
 }
 
-.navbar-light .navbar-toggler,
-.navbar-light .navbar-toggler:focus {
-    color: rgba(0,0,0,.5);
-    border-color: transparent;
-    outline: unset;
-}
-
-.grand-total-position {
-    position: absolute;
-}
-
-.alert-container .col-12 {
-    padding-left: 0;
-    padding-right: 0;
-}
-
-.site-wide-alert {
-    color: #fff;
-    background-color: #CA0B00;
-    border-color: #CA0B00;
-    padding: 5px 25px;
-    margin-bottom: 0;
-    border: 1px solid transparent;
-    border-radius: 0;
-    width: 100vw;
-}
-
+/* overlay on background image */
 .rgba-black-light,
 .rgba-black-light:after,
 .rgba-black-light:before {
-  position: absolute; /* Sit on top of the page content */
-  display: block; /* Hidden by default */
-  width: 100%; /* Full width (cover the whole page) */
+  position: absolute;
+  /* Sit on top of the page content */
+  display: block;
+  /* Hidden by default */
+  width: 100%;
+  /* Full width (cover the whole page) */
   background-color: #0000009c;
-  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
-}
-
-/* from Bulma */
-.icon {
-  align-items: center;
-  display: inline-flex;
-  justify-content: center;
-  height: 1.5rem;
-  width: 1.5rem;
-}
-
-.logo-font {
-  text-transform: uppercase;
-}
-
-.main-logo-link {
-  width: fit-content;
-  top: 0;
-}
-
-button#main-nav-btn.navbar-toggler {
-  z-index: 1;
-  margin-top: 16px;
-}
-
-.navbar.navbar-expand-lg.navbar-dark {
-  padding: 0 1rem;
-}
-
-#topnav {
-  box-shadow: -1px 4px 10px -1px rgba(0,0,0,0.7);
-  position:relative;
-  z-index:999;
-  width: 100vw;
-}
-.jsenabled {
-  display:none
-}
-
-.header-container {
-    margin-top: 200px;
-  }
-
-#store {
-  box-shadow: -1px 4px 10px -1px rgba(0,0,0,0.7);
-  position:relative;
-  z-index:998;
+  z-index: 2;
+  /* Specify a stack order in case you're using a different order for other elements */
 }
 
 .overlay {
   height: 100%;
   width: 100%;
   margin: auto;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   background: white;
   z-index: -1;
 }
 
-.store-header-margin {
-    margin-top: 240px;
-}
-.separator {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  border: 0;
-  border-top: 2px solid #ffffffd7;
-}
-
-.home-buttons {
-  color: white;
-  background-color: rgba(255, 255, 255, .15);  
-  backdrop-filter: blur(5px);
-  min-width: 160px;
-}
-
-.btn-glass {
-  background-color: rgba(255, 255, 255, .15);  
-  backdrop-filter: blur(5px);
-  color: white;
-}
-
-.btn-outline-glass {
-  background-color: rgba(255, 255, 255, .15);  
-  backdrop-filter: blur(5px);
-  color: black !important; /* use important to override link colors for <a> elements */
-  border: 1px solid black;
-}
-
-.btn-outline-glass:hover,
-.btn-outline-glass:active,
-.btn-outline-black:focus {
-  background-color: rgba(255, 255, 255, .15);  
-  backdrop-filter: blur(5px);
-  color: white !important;
-}
-
-.home-buttons:hover,
-.home-buttons:active,
-.home-buttons:focus,
-.btn-glass:hover,
-.btn-glass:active,
-.btn-glass:focus {
-  background-color: rgba(94, 94, 94, 0.15);  
-  backdrop-filter: blur(5px);
-  color: white;
-}
-
 .btt-button {
-    height: 42px;
-    width: 42px;
-    position: fixed;
-    bottom: 10px;
-    border-radius:3px;
-    z-index: 40000;  
+  height: 42px;
+  width: 42px;
+  position: fixed;
+  bottom: 10px;
+  border-radius: 3px;
+  z-index: 40000;
 }
 
-.update-link,
 .remove-item {
-    cursor:pointer;
+  cursor: pointer;
 }
 
 .btt-link {
-    cursor: pointer;
-    box-shadow: 7px 7px 14px -3px rgba(0,0,0,0.65);
+  cursor: pointer;
+  box-shadow: 7px 7px 14px -3px rgba(0, 0, 0, 0.65);
 }
 
 .nav-link {
@@ -266,11 +195,14 @@ button#main-nav-btn.navbar-toggler {
   z-index: 2;
 }
 
+
 /* Allauth form formatting */
 
 .allauth-form-inner-content p {
-    margin-top: 1.5rem; /* mt-4 */
-    color: #6c757d; /* text-secondary */
+  margin-top: 1.5rem;
+  /* mt-4 */
+  color: #6c757d;
+  /* text-secondary */
 }
 
 .stripe-style-input,
@@ -285,6 +217,7 @@ button#main-nav-btn.navbar-toggler {
   background-color: white;
   border-bottom: 2px solid #000;
 }
+
 .stripe-style-input:focus,
 .stripe-style-input:active,
 .allauth-form-inner-content input:focus,
@@ -294,17 +227,17 @@ button#main-nav-btn.navbar-toggler {
 }
 
 .allauth-form-inner-content label:not([for='id_remember']) {
-    display: none;
+  display: none;
 }
 
 .allauth-form-inner-content input::placeholder {
-    color: #aab7c4;
+  color: #aab7c4;
 }
 
 .allauth-form-inner-content button,
 .allauth-form-inner-content input[type='submit'] {
-	/* btn */
-	display: inline-block;
+  /* btn */
+  display: inline-block;
   font-weight: 400;
   color: #fff;
   text-align: center;
@@ -317,134 +250,139 @@ button#main-nav-btn.navbar-toggler {
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 0;
-    
-
-    /* standard bootstrap btn transitions */
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  /* standard bootstrap btn transitions */
+  transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
 .allauth-form-inner-content button:hover,
-.allauth-form-inner-content input[type='submit']:hover {	
-	color: #fff;
+.allauth-form-inner-content input[type='submit']:hover {
+  color: #fff;
   background-color: #222;
-    border-color: #222;
+  border-color: #222;
 }
 
 .allauth-form-inner-content a {
-	color: #339244; /* text-info */
+  color: #339244;
+  /* text-info */
 }
+
 
 /* ------------------------------- bootstrap toasts */
 
 .message-container {
-    position: fixed;
-    top: 70px;
-    left: 15px;
-    z-index: 99999999999;
+  position: fixed;
+  top: 70px;
+  left: 15px;
+  z-index: 99999999999;
 }
 
 .custom-toast {
-    overflow: visible;
-    background-color: #fff;
+  overflow: visible;
+  background-color: #fff;
 }
 
 .toast-capper {
-    height: 2px;
+  height: 2px;
 }
+
 
 /* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
+
 .arrow-up {
-    width: 0; 
-    height: 0; 
-    border-left: 4px solid transparent;
-    border-right: 4px solid transparent; 
-    border-bottom: 10px solid black;
-    position: absolute;
-    top: -10px;
-    left: 103px;
+  width: 0;
+  height: 0;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-bottom: 10px solid black;
+  position: absolute;
+  top: -10px;
+  left: 103px;
 }
 
+
 /* Convenience classes - colors copied from Bootstrap */
+
 .arrow-primary {
-    border-bottom-color: #007bff !important;
+  border-bottom-color: #007bff !important;
 }
 
 .arrow-secondary {
-    border-bottom-color: #6c757d !important;
+  border-bottom-color: #6c757d !important;
 }
 
 .arrow-success {
-    border-bottom-color: #28a745 !important;
+  border-bottom-color: #28a745 !important;
 }
 
 .arrow-danger {
-    border-bottom-color: #dc3545 !important;
+  border-bottom-color: #dc3545 !important;
 }
 
 .arrow-warning {
-    border-bottom-color: #ffc107 !important;
+  border-bottom-color: #ffc107 !important;
 }
 
 .arrow-info {
-    border-bottom-color: #17a2b8 !important;
+  border-bottom-color: #17a2b8 !important;
 }
 
 .arrow-light {
-    border-bottom-color: #f8f9fa !important;
+  border-bottom-color: #f8f9fa !important;
 }
 
 .arrow-dark {
-    border-bottom-color: #343a40 !important;
+  border-bottom-color: #343a40 !important;
 }
 
 .bag-notification-wrapper {
-    height: 100px;
-    overflow-x: hidden;
-    overflow-y: auto;
+  height: 100px;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
+
 
 /* Product Form */
 
 .btn-file {
-    position: relative;
-    overflow: hidden;
+  position: relative;
+  overflow: hidden;
 }
 
 .btn-file input[type="file"] {
-    position: absolute;
-    top: 0;
-    right: 0;
-    min-width: 100%;
-    min-height: 100%;
-    opacity: 0;
-    cursor: pointer;
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+  opacity: 0;
+  cursor: pointer;
 }
 
 .custom-checkbox .custom-control-label::before {
-    border-radius: 0;
-    border-color: #28a745;
+  border-radius: 0;
+  border-color: #28a745;
 }
 
 .custom-checkbox .custom-control-input:checked~.custom-control-label::before {
-    background-color: #28a745;
-    border-color: #28a745;
-    border-radius: 0;
+  background-color: #28a745;
+  border-color: #28a745;
+  border-radius: 0;
 }
 
 
 /* fixed top navbar only on medium and up */
+
 @media (min-width: 992px) {
   .fixed-top-desktop-only {
-      position: fixed;
-      top: 0;
-      right: 0;
-      left: 0;
-      z-index: 1030;
-
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
   }
   .search-bar {
-      position: absolute;
-      top: 0;
+    position: absolute;
+    top: 0;
   }
   .navbar-expand-lg .navbar-nav .dropdown-menu.search-bar {
     left: 50px;
@@ -453,11 +391,10 @@ button#main-nav-btn.navbar-toggler {
     width: 300px;
     z-index: 1;
   }
-  
 }
 
 #navbar-toggle-cbox {
-  display:none
+  display: none
 }
 
 @media (max-width: 992px) {
@@ -475,7 +412,7 @@ button#main-nav-btn.navbar-toggler {
 @media (max-width: 999px) {
   .store-header-margin {
     margin-top: 180px;
-  } 
+  }
 }
 
 @media (max-width: 575px) {
@@ -484,23 +421,21 @@ button#main-nav-btn.navbar-toggler {
   }
 }
 
-
 @media (max-width: 991px) {
   .nav-item {
     border-bottom: 1px solid;
-  }  
+  }
   .btn.btn-outline-glass.rounded-0,
   .btn.btn-glass.rounded-0 {
     padding: .375rem .375rem;
   }
-
-    .btn.btn-outline-glass.rounded-0.btn-md,
-    .btn.btn-glass.rounded-0.btn-md {
-        padding: .375rem .375rem;
-        font-size: .75rem;
-    }
+  .btn.btn-outline-glass.rounded-0.btn-md,
+  .btn.btn-glass.rounded-0.btn-md {
+    padding: .375rem .375rem;
+    font-size: .75rem;
+  }
 }
- 
+
 @media (max-width: 600px) {
   h1 {
     font-size: 2rem;
@@ -518,17 +453,15 @@ button#main-nav-btn.navbar-toggler {
     line-height: 1.2;
   }
 }
-@media (min-width: 1200px) {
-    div p span.dot-letter {
 
+@media (min-width: 1200px) {
+  div p span.dot-letter {
     display: table;
-
-    }
+  }
 }
-
 
 @media (min-width: 1200px) {
-.container {
+  .container {
     max-width: 80%;
-}
+  }
 }
